Styling footer; render post tags

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,6 +4,7 @@ const today = new Date();
 
 <footer class="text-center text-sm flex justify-center mb-10">
 	<div class="flex flex-col gap-y-8">
+		<hr class="my-6 bg-quartz-l20 border-quartz-d40" />
 		<p>
 			{today.getFullYear()} · Ricardo Gouveia · <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.pt_BR" target="_blank" class="underline">CC BY-SA 4.0</a>
 			<span class="flex text-xs text-quartz-l20 mt-1.5">(a menos que especificado de outra forma e/ou em conteúdo replicado de outras fontes | Logotipos e marcas registradas pertencem aos seus respectivos proprietários)</span>
@@ -16,6 +17,4 @@ const today = new Date();
 			<a href="https://slrncl.com" target="_blank" class="underline">slrncl</a>
 		</p>
 	</div>
-
-
 </footer>
