footer link and flags

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,8 +5,18 @@ const today = new Date();
 <footer class="text-center text-sm flex justify-center mb-10">
 	<div class="flex flex-col gap-y-8">
 		<hr class="my-6 bg-quartz-l20 border-quartz-d40" />
+		<div class="flex justify-center gap-4 text-center align-middle items-center">
+			<a href="https://rcrd.dev">
+				<img src='/img/logo.svg' alt="RCRD logo" class="h-[30px]" />
+			</a>
+			<span>&nbsp;·&nbsp;</span>
+			<img src='/img/pe-br.svg' alt="Pernambuco's flag" class="h-[22px]" />
+			<img src='/img/pa-br.svg' alt="Pará's flag" class="h-[22px]" />
+			<img src='/img/sp-br.svg' alt="São Paulo's Flag" class="h-[22px]" />
+			<img src='/img/br.svg' alt="Brazil's flag" class="h-[22px]" />
+		</div>
 		<p>
-			{today.getFullYear()} · Ricardo Gouveia · <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.pt_BR" target="_blank" class="underline">CC BY-SA 4.0</a>
+			{today.getFullYear()}&nbsp;·&nbsp;Ricardo Gouveia&nbsp;·&nbsp;<a href="https://creativecommons.org/licenses/by-sa/4.0/deed.pt_BR" target="_blank" class="underline">CC BY-SA 4.0</a>
 			<span class="flex text-xs text-quartz-l20 mt-1.5">(a menos que especificado de outra forma e/ou em conteúdo replicado de outras fontes | Logotipos e marcas registradas pertencem aos seus respectivos proprietários)</span>
 		</p>
 		
