--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<h2 class="p-1.5"><a href="/"><span class="text-quartz-l20">@{SITE_TITLE}</span></a> · {SITE_DESCRIPTION}</h2>
 		<div class="flex gap-x-4 no-underline">
 			<HeaderLink href="/">Início</HeaderLink>
-			<HeaderLink href="https://dev.to/rcrd" target={'_blank'}>Posts in 🇬🇧 ↗</HeaderLink>
+			<HeaderLink href="https://dev.to/rcrd" target={'_blank'}>Posts in <img src="/img/uk-flag.png" width="20px" alt="UK flag" class="inline-block"> ↗</HeaderLink>
 		</div>
 	</nav>
 </header>
